# kernel-guide

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  build.sh  develop.sh  setup.py
csrc/: python_api.cpp
csrc/apis/: cp_async.hpp  hello.hpp  runtime.hpp  tma.hpp
csrc/gemm/: gemm_bf16_nn.cuh
csrc/hello/: hello.hpp
csrc/jit/jitter/: cache.hpp
csrc/jit/utils/: exception.hpp  math.hpp
csrc/jitter/: compiler.hpp  device_runtime.hpp  handle.hpp  kernel_runtime.hpp
csrc/runtime/: runtime.hpp
csrc/utils/: exception.hpp  hash.hpp  layout.hpp  lazy_init.hpp  system.hpp
indexing/: main.cu
jit/jit/: compiler.hpp  device_runtime.hpp  handle.hpp  kernel_runtime.hpp
jit/jit_kernels/utils/: tuner.py  util.py
jit/jitter/: compiler.hpp  device_runtime.hpp  handle.hpp  kernel_runtime.hpp
jit/utils/: exception.hpp  hash.hpp  layout.hpp  lazy_init.hpp  math.hpp  system.hpp
jit_version/jit/: __init__.py  compiler.py  interleave_ffma.py  runtime.py  template.py
jit_version/jit_kernels/hello/: hello.py
jit_version/jit_kernels/utils/: tuner.py
kernels/: __init__.py  python_api.cpp
kernels/cute_dsl_kernels/example/: cute_tensor.py  func.py  layout.py  tiled_copy.py  tiled_mma.py
kernels/cute_dsl_kernels/flash_attn_v2/: forward.py
kernels/cute_dsl_kernels/gemm/: sgemm_nt.py
kernels/cute_dsl_kernels/hello/: hello.py
kernels/hello/: api.hpp  hello.cuh
kernels/include/cp_async/: cp_async.cuh  cp_async.ptx
kernels/include/hello/: hello.cuh
kernels/include/tma/: strategy.cuh  tma.cuh
prototype/include/: prototype.cuh
prototype/include/memory/: memory.cuh
prototype/include/runtime/: runtime.cuh
prototype/include/sync/: async.cuh  sync.cuh
prototype/include/utils/: util.cuh
pybind/: setup.py
tests/: test_cp_async.py  test_hello.py  test_swizzle.py  test_tma.py
triton/gemm/: __init__.py  gemm.py
triton_impl/gemm/: native_gemm.py
triton_impl/test/: test_gemm.py
